examples/bad/06-runtime_errors.ez
rememberCholerae : Integer -> Integer;
rememberCholerae x = x / 0;

;* Match examples in file 08-10 and 15
noMatchHead : [a] -> a;
noMatchHead lst = match lst with {h::t -> h;};

main : Integer ;
main = rememberCholerae 13;
